agregando img y desarrollando la seccíón de skills

--- a/index.html
+++ b/index.html
@@ -117,10 +117,22 @@
                     <p class="resumen">Encontré en la programación web, una ventana a muchas cosas que me fascinan, como trabajar en equipo y resolver retos que ponen a prueba mi ingenio y creatividad. Por eso, ahora busco ser parte de una empresa en la cual pueda volcar todo mi conocimiento y me permita seguir formándome para ser cada día un mejor programador.</p>
                     <p class="resumen">Además, estoy en el programa ONE, de Oracle + Alura LATAM, donde estoy estudiando, practicando y me sigo especializando para seguir creciendo siempre en esta profesión. Estoy ansioso por formar parte de una empresa y tener mi trabajo enteramente como desarrollador.</p>
                     <h3 class="habilidades">Hobbies:</h3>
-                    <p class="resumen">Cuando tengo tiempo para algo más que trabajar y estudiar, mi hobbie también es estudiar, porque disfruto de aprender. Me gusta leer sobre ciencias exactas, matemática, física, química, biología, bioqúimica, y sobre desarrollo personal, como libros de liderazgo y otros que apunten a potenciar las habilidades blandas y la inteligencia emocional.</p>
-                    <p class="resumen">Además, en mis tiempos libres le dedico tiempo a mi perro Tilo, y juego con él, que me acompaña siempre que estoy sentando trabajando con la notebook. Es mi fiel compañero todo el tiempo.</p>
-                    <p class="resumen">Me gusta el cine y mirar películas en casa, sobre todo los días de lluvia y frío donde se siente el olor a la tierra mojada, y las gotitas de agua golpean la ventana. Una buena taza de chocolate caliente, con algo dulce como un chocolate, siempre hacen la combinación perfecta para ese momento ¡Me encanta!</p>
-                    <p class="resumen">Me gusta entrenar, sobre todo los entrenamientos de fuerza, pero también me gusta salir a correr, porque me despeja.</p>
+                    <div class="cajaHobbie">
+                        <img src="img/books.png" class="iconoHobbie" alt="libros">
+                        <p class="resumen">Cuando tengo tiempo para algo más que trabajar y estudiar, mi hobbie también es estudiar, porque disfruto de aprender. Me gusta leer sobre ciencias exactas, matemática, física, química, biología, bioqúimica, y sobre desarrollo personal, como libros de liderazgo y otros que apunten a potenciar las habilidades blandas y la inteligencia emocional.</p>
+                    </div>
+                    <div class="cajaHobbie">
+                        <img src="img/dog.png" class="iconoHobbie" alt="perro">
+                        <p class="resumen">Además, en mis tiempos libres le dedico tiempo a mi perro Tilo, y juego con él, que me acompaña siempre que estoy sentando trabajando con la notebook. Es mi fiel compañero todo el tiempo.</p>
+                    </div>
+                    <div class="cajaHobbie">
+                        <img src="img/movie.png" class="iconoHobbie" alt="película en una TV">
+                        <p class="resumen">Me gusta el cine y mirar películas en casa, sobre todo los días de lluvia y frío donde se siente el olor a la tierra mojada, y las gotitas de agua golpean la ventana. Una buena taza de chocolate caliente, con algo dulce como un chocolate, siempre hacen la combinación perfecta para ese momento ¡Me encanta!</p>
+                    </div>
+                    <div class="cajaHobbie">
+                        <img src="img/pesa.png" class="iconoHobbie" alt="pesa de entrenamiento">
+                        <p class="resumen">Me gusta entrenar, sobre todo los entrenamientos de fuerza, pero también me gusta salir a correr, porque me despeja.</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -180,7 +192,73 @@
             </div>
             <div class="contenedor">
                 <p class="habilidades fs-4 m-3">Soft skills:</p>
-                <p class="habilidades fs-5 m-3">Resiliencia, liderazgo, proactividad, autonomía, trabajo en equipo, responsabilidad, entusiasmo</p>
+                <!-- <p class="habilidades fs-5 m-3">Resiliencia, liderazgo, proactividad, autonomía, trabajo en equipo, responsabilidad, entusiasmo</p> -->
+                <div class="cajaSkills">
+                    <div class="m-2">
+                        <img src="img/resiliencia.png" class="iconoSkill" alt="imagen de HTML5">
+                        <p class="nombreIcono lead">Resiliencia</p>
+                    </div>
+                    <div class="m-2">
+                        <img src="img/liderazgo.png" class="iconoSkill" alt="imagen de HTML5">
+                        <p class="nombreIcono lead">Liderazgo</p>
+                    </div>
+                    <div class="m-2">
+                        <img src="img/sentido.png" class="iconoSkill" alt="imagen de HTML5">
+                        <p class="nombreIcono lead m-0">Sentido</p>
+                        <p class="nombreIcono lead m-0">Común</p>
+                    </div>
+                    <div class="m-2">
+                        <img src="img/pens-critico.png" class="iconoSkill" alt="imagen de HTML5">
+                        <p class="nombreIcono lead m-0">Pensamiento</p>
+                        <p class="nombreIcono lead m-0">Crítico</p>
+                    </div>
+                    <div class="m-2">
+                        <img src="img/proactividad.png" class="iconoSkill" alt="imagen de HTML5">
+                        <p class="nombreIcono lead">Proactividad</p>
+                    </div>
+                    <div class="m-2">
+                        <img src="img/pens-autonomia.png" class="iconoSkill" alt="imagen de HTML5">
+                        <p class="nombreIcono lead">Autonomía</p>
+                    </div>
+                    <div class="m-2">
+                        <img src="img/lista-de-verificacion.png" class="iconoSkill" alt="imagen de HTML5">
+                        <p class="nombreIcono lead">Compromiso</p>
+                    </div>
+                    <div class="m-2">
+                        <img src="img/responsabilidad.png" class="iconoSkill" alt="imagen de HTML5">
+                        <p class="nombreIcono lead">Responsabilidad</p>
+                    </div>
+                    <div class="m-2">
+                        <img src="img/entusiasmo.png" class="iconoSkill" alt="imagen de HTML5">
+                        <p class="nombreIcono lead">Entusiasmo</p>
+                    </div>
+                    <div class="m-2">
+                        <img src="img/motivacion.png" class="iconoSkill" alt="imagen de HTML5">
+                        <p class="nombreIcono lead">Motivación</p>
+                    </div>
+                    <div class="m-2">
+                        <img src="img/concentracion.png" class="iconoSkill" alt="imagen de HTML5">
+                        <p class="nombreIcono lead">concentración</p>
+                    </div>
+                    <div class="m-2">
+                        <img src="img/comunicacion.png" class="iconoSkill" alt="imagen de HTML5">
+                        <p class="nombreIcono lead">Comunicación</p>
+                    </div>
+                    <div class="m-2">
+                        <img src="img/flexibilidad.png" class="iconoSkill" alt="imagen de HTML5">
+                        <p class="nombreIcono lead">Flexibilidad</p>
+                    </div>
+                    <div class="m-2">
+                        <img src="img/gestion-del-tiempo.png" class="iconoSkill" alt="imagen de HTML5">
+                        <p class="nombreIcono lead m-0">Gestión del</p>
+                        <p class="nombreIcono lead m-0">tiempo</p>
+                    </div>
+                    <div class="m-2">
+                        <img src="img/trabajo-equipo.png" class="iconoSkill" alt="imagen de HTML5">
+                        <p class="nombreIcono lead m-0">Trabajo</p>
+                        <p class="nombreIcono lead m-0">en equipo</p>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- Fin de la sección de skills -->
@@ -337,7 +415,7 @@
                 <a href="https://www.linkedin.com/in/nahuel-developer/" target="_blank" class="m-2"><img
                         src="./img/linkedin.svg" alt="Imagen del icono de linkedIn" class="icono"></a> -->
             </div>
-            <div class="info fs-4 mb-5">&copy;2022 Desarrollado por Nahuel-DevOne</div>
+            <p class="info fs-4 mb-5">&copy;2022 Desarrollado por Nahuel-DevOne</p>
         </div>
     </footer>
     <!-- Acá termina el pie de página -->
