modificando el h1 y otras etiquetas

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="presentacion contenedor mb-4">
                 <!-- Texto de presentación e iconos de redes sociales-->
                 <div class="presentacionInfo stretchRight">
-                    <h1 class="display-2">¡Hola! Me llamo Nahuel y soy Desarrollador Front-end React</h1>
+                    <h1>¡Hola! Me llamo Nahuel y soy Desarrollador Front-end React</h1>
                     <p class="fs-3 lead">Actualmente me encuentro estudiando tecnologías de backend con Node.js, para ser un desarrollador full stack. A la vez, formo parte del programa ONE, de Oracle + Alura Latam donde me estoy especializando y estudiando cada vez más para ser un mejor desarrollador</p>
                     <div class="cajaIconosPresentacion">
                         <a href="https://www.linkedin.com/in/nahuel-developer/" target="_blank" class="m-3 text-decoration-none">
@@ -115,7 +115,7 @@
                 <div class="sobreMiTexto">
                     <p class="resumen">¡Hola mundo! Mi nombre es Nahuel, soy de Buenos Aires (Argentina), y además de ser un Desarrollador Front-end React soy profesor de matemática desde hace años. En este momento, tengo mi tiempo dividido entre la programación y mi profesión docente en escuelas. Pero, me sigo perfeccionando y estudiando desarrollo web full stack, con tecnologías de backend con node.js, para cambiar de carrera y dedicarme de lleno a programar.</p>
                     <p class="resumen">Encontré en la programación web, una ventana a muchas cosas que me fascinan, como trabajar en equipo y resolver retos que ponen a prueba mi ingenio y creatividad. Por eso, ahora busco ser parte de una empresa en la cual pueda volcar todo mi conocimiento y me permita seguir formándome para ser cada día un mejor programador.</p>
-                    <p class="resumen">Además, estoy en el programa ONE, de Oracle + Alura LATAM, donde estoy estudiando, practicando y me sigo especializando para seguir creciendo siempre en esta profesión. Estoy ansioso por formar parte de una empresa y tener mi trabajo enteramente como desarrollador.</p>
+                    <p class="resumen">Además, estoy en el programa ONE, de Oracle + Alura LATAM, donde estoy estudiando, practicando y me sigo especializando para seguir creciendo en esta profesión. Estoy ansioso por formar parte de una empresa y tener mi trabajo enteramente como desarrollador.</p>
                     <h3 class="habilidades">Hobbies:</h3>
                     <div class="cajaHobbie">
                         <img src="img/books.png" class="iconoHobbie" alt="libros">
@@ -142,7 +142,7 @@
         <section>
             <h2 id="skills" class="titulo fs-1 mt-4">Skills</h2>
             <div class="contenedor">
-                <p class="habilidades fs-4 m-3">Technical skills:</p>
+                <h3 class="habilidades fs-4 m-3">Technical skills:</h3>
                 <!-- <p class="habilidades fs-5 m-3">HTML5 - CSS3 - SASS - Bootstrap - Git - GitHub - JavaScript - React
                     - Firebase</p> -->
                 <div class="cajaSkills">
@@ -191,7 +191,7 @@
                 </div>    
             </div>
             <div class="contenedor">
-                <p class="habilidades fs-4 m-3">Soft skills:</p>
+                <h3 class="habilidades fs-4 m-3">Soft skills:</h3>
                 <!-- <p class="habilidades fs-5 m-3">Resiliencia, liderazgo, proactividad, autonomía, trabajo en equipo, responsabilidad, entusiasmo</p> -->
                 <div class="cajaSkills">
                     <div class="m-2">
