dejando el proyecto responsive

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PORTFOLIO</title>
+    <title>PORTAFOLIO</title>
     <meta name="keywords" content="palabras clave ...">
     <meta name="description" content="Este es el sitio web de mi portafolio ...">
     <!-- Imagen para el título de la pestaña -->
@@ -33,8 +33,8 @@
                     <div class="logo">
                         <span class="gear rodar">S</span>
                         <a href="#" id="marcaPersonal">
-                            <p>Nahuel</p>
-                            <p>DevOne</p>
+                            <p class="m-0">Nahuel</p>
+                            <p class="m-0">DevOne</p>
                         </a>
                         <span class="justBeNice desplazamiento">#</span>
                     </div>
@@ -78,8 +78,8 @@
             <div class="presentacion contenedor mb-4">
                 <!-- Texto de presentación e iconos de redes sociales-->
                 <div class="presentacionInfo stretchRight">
-                    <h1>¡Hola! Me llamo Nahuel y soy Desarrollador Front-end React</h1>
-                    <p class="fs-3 lead">Actualmente me encuentro estudiando tecnologías de backend con Node.js, para ser un desarrollador full stack. A la vez, formo parte del programa ONE, de Oracle + Alura Latam donde me estoy especializando y estudiando cada vez más para ser un mejor desarrollador</p>
+                    <h1 class="tituloPrincipal">¡Hola! Me llamo Nahuel y soy Desarrollador Front-end React</h1>
+                    <p class="presentacionInfoPrincipal lead">Actualmente me encuentro estudiando tecnologías de backend con Node.js, para ser un desarrollador full stack. A la vez, formo parte del programa ONE, de Oracle + Alura Latam donde me estoy especializando y estudiando cada vez más para ser un mejor desarrollador</p>
                     <div class="cajaIconosPresentacion">
                         <a href="https://www.linkedin.com/in/nahuel-developer/" target="_blank" class="m-3 text-decoration-none">
                             <img src="./img/linkedin.svg" alt="Imagen del icono de linkedIn" class="iconoPresentacion trans
@@ -119,7 +119,7 @@
                     <h3 class="habilidades">Hobbies:</h3>
                     <div class="cajaHobbie">
                         <img src="img/books.png" class="iconoHobbie" alt="libros">
-                        <p class="resumen">Cuando tengo tiempo para algo más que trabajar y estudiar, mi hobbie también es estudiar, porque disfruto de aprender. Me gusta leer sobre ciencias exactas, matemática, física, química, biología, bioqúimica, y sobre desarrollo personal, como libros de liderazgo y otros que apunten a potenciar las habilidades blandas y la inteligencia emocional.</p>
+                        <p class="resumen">Cuando tengo tiempo para algo más que trabajar y estudiar, mi hobbie también es estudiar, porque disfruto de aprender. Me gusta leer sobre ciencias exactas, matemática, física, química, biología, y sobre desarrollo personal, como libros de liderazgo y otros que apunten a potenciar las habilidades blandas y la inteligencia emocional.</p>
                     </div>
                     <div class="cajaHobbie">
                         <img src="img/dog.png" class="iconoHobbie" alt="perro">
@@ -147,11 +147,11 @@
                     - Firebase</p> -->
                 <div class="cajaSkills">
                     <div>
-                        <img src="img/git-alt-brands.svg" class="iconoSkill iconoSkillGit" alt="imagen de HTML5">
+                        <img src="img/git-alt-brands.svg" class="iconoSkill" alt="imagen de HTML5">
                         <p class="nombreIcono lead">Git</p>
                     </div>    
                     <div>
-                        <img src="img/github-brands.svg" class="iconoSkill iconoSkillGitHub" alt="imagen de HTML5">
+                        <img src="img/github-brands.svg" class="iconoSkill" alt="imagen de HTML5">
                         <p class="nombreIcono lead">GitHub</p>
                     </div>    
                     <div>
@@ -415,7 +415,7 @@
                 <a href="https://www.linkedin.com/in/nahuel-developer/" target="_blank" class="m-2"><img
                         src="./img/linkedin.svg" alt="Imagen del icono de linkedIn" class="icono"></a> -->
             </div>
-            <p class="info fs-4 mb-5">&copy;2022 Desarrollado por Nahuel-DevOne</p>
+            <p class="info mb-3">&copy;2022 Desarrollado por Nahuel-DevOne</p>
         </div>
     </footer>
     <!-- Acá termina el pie de página -->
