mejorando los estilos en la sección proyectos

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                         </a>
                         <div class="info">
                             <p class="fs-4">Proyecto-Coderhouse</p>
-                            <p class="fs-5 mt-4 opacidad">Sitio Web</p>
+                            <p class="fs-4 mt-4 lead">Sitio Web</p>
                         </div>
                     </article>
                     <article class="proyecto trans">
@@ -293,7 +293,7 @@
                         </a>
                         <div class="info">
                             <p class="fs-4">Portfolio</p>
-                            <p class="fs-5 mt-4">Bootstrap 5</p>
+                            <p class="fs-4 mt-4 lead">Bootstrap 5</p>
                         </div>
                     </article>
                     <article class="proyecto trans">
@@ -302,7 +302,7 @@
                         </a>
                         <div class="info">
                             <p class="fs-4">Agenda de clientes</p>
-                            <p class="fs-5 mt-4">JavaScript</p>
+                            <p class="fs-4 mt-4 lead">JavaScript</p>
                         </div>
                     </article>
                     <article class="proyecto trans">
@@ -312,7 +312,7 @@
                         </a>
                         <div class="info">
                             <p class="fs-4">Encriptador</p>
-                            <p class="fs-5 mt-4">JavaScript</p>
+                            <p class="fs-4 mt-4 lead">JavaScript</p>
                         </div>
                     </article>
                     <article class="proyecto trans">
@@ -321,7 +321,7 @@
                         </a>
                         <div class="info">
                             <p class="fs-4">Ahorcado</p>
-                            <p class="fs-5 mt-4">JavaScript</p>
+                            <p class="fs-4 mt-4 lead">JavaScript</p>
                         </div>
                     </article>
                     <article class="proyecto trans">
@@ -330,14 +330,14 @@
                         </a>
                         <div class="info">
                             <p class="fs-4">Ecommerce</p>
-                            <p class="fs-5 mt-4">React.js</p>
+                            <p class="fs-4 mt-4 lead">React.js</p>
                         </div>
                     </article>
                     <article class="proyecto trans">
                         <a href="#" target="_blank"><img src="img/img-appPacientes.png" alt="" class="img"></a>
                         <div class="info">
                             <p class="fs-4">App de pacientes</p>
-                            <p class="fs-5 mt-4">Programa ONE (pronto)</p>
+                            <p class="fs-4 mt-4 lead">Programa ONE (pronto)</p>
                         </div>
                     </article>
                     <article class="proyecto trans">
@@ -346,7 +346,7 @@
                         </a>
                         <div class="info">
                             <p class="fs-4">Carrito de compras</p>
-                            <p class="fs-5 mt-4">JavaScript (pronto)</p>
+                            <p class="fs-4 mt-4 lead">JavaScript (pronto)</p>
                         </div>
                     </article>
                     <!-- <article class="proyecto trans">
@@ -415,7 +415,7 @@
                 <a href="https://www.linkedin.com/in/nahuel-developer/" target="_blank" class="m-2"><img
                         src="./img/linkedin.svg" alt="Imagen del icono de linkedIn" class="icono"></a> -->
             </div>
-            <p class="info mb-3">&copy;2022 Desarrollado por Nahuel-DevOne</p>
+            <h4 class="info mb-3">&copy;2022 Desarrollado por Nahuel-DevOne</h4>
         </div>
     </footer>
     <!-- Acá termina el pie de página -->
