mejorando los estilos

--- a/index.html
+++ b/index.html
@@ -141,10 +141,8 @@
         <!-- Sección de skills (habilidades técnicas y blandas)-->
         <section>
             <h2 id="skills" class="titulo fs-1 mt-4">Skills</h2>
-            <div class="contenedor">
-                <h3 class="habilidades fs-4 m-3">Technical skills:</h3>
-                <!-- <p class="habilidades fs-5 m-3">HTML5 - CSS3 - SASS - Bootstrap - Git - GitHub - JavaScript - React
-                    - Firebase</p> -->
+            <div>
+                <h3 class="habilidades fs-4 m-4">Technical skills:</h3>
                 <div class="cajaSkills">
                     <div>
                         <img src="img/git-alt-brands.svg" class="iconoSkill" alt="imagen de HTML5">
@@ -189,10 +187,7 @@
                         <img src="img/database-solid.svg" class="iconoSkill iconoSkillDataBase" alt="imagen de HTML5">
                     </div>     -->
                 </div>    
-            </div>
-            <div class="contenedor">
-                <h3 class="habilidades fs-4 m-3">Soft skills:</h3>
-                <!-- <p class="habilidades fs-5 m-3">Resiliencia, liderazgo, proactividad, autonomía, trabajo en equipo, responsabilidad, entusiasmo</p> -->
+                <h3 class="habilidades fs-4 m-4">Soft skills:</h3>
                 <div class="cajaSkills">
                     <div class="m-2">
                         <img src="img/resiliencia.png" class="iconoSkill" alt="imagen de HTML5">
