mejorando el código y agregando botones a la sección de proyectos

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <h2 id="skills" class="titulo fs-1 mt-4">Skills</h2>
             <div>
                 <h3 class="habilidades fs-4 m-4">Technical skills:</h3>
-                <div class="cajaSkills">
+                <div class="cajaSkills mb-5">
                     <div>
                         <img src="img/git-alt-brands.svg" class="iconoSkill" alt="imagen de HTML5">
                         <p class="nombreIcono lead">Git</p>
@@ -188,7 +188,7 @@
                     </div>     -->
                 </div>    
                 <h3 class="habilidades fs-4 m-4">Soft skills:</h3>
-                <div class="cajaSkills">
+                <div class="cajaSkills mb-5">
                     <div class="m-2">
                         <img src="img/resiliencia.png" class="iconoSkill" alt="imagen de HTML5">
                         <p class="nombreIcono lead">Resiliencia</p>
@@ -278,8 +278,12 @@
                                 alt="imagen de una chica morena con rulos, y con una laptop, sonriendo" class="img">
                         </a>
                         <div class="info">
-                            <p class="fs-4">Proyecto-Coderhouse</p>
-                            <p class="fs-4 mt-4 lead">Sitio Web</p>
+                            <p class="fs-4 m-0">Proyecto-Coderhouse</p>
+                            <p class="fs-4 mt-3 lead">Sitio Web</p>
+                        </div>
+                        <div>
+                            <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
+                            <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver Código</button>
                         </div>
                     </article>
                     <article class="proyecto trans">
@@ -287,8 +291,12 @@
                             <img src="./img/portafolio.png" alt="imagen de un portafolio de trabajos" class="img">
                         </a>
                         <div class="info">
-                            <p class="fs-4">Portfolio</p>
-                            <p class="fs-4 mt-4 lead">Bootstrap 5</p>
+                            <p class="fs-4 m-0">Portafolio</p>
+                            <p class="fs-4 mt-3 lead">Bootstrap 5</p>
+                        </div>
+                        <div>
+                            <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
+                            <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver Código</button>
                         </div>
                     </article>
                     <article class="proyecto trans">
@@ -296,8 +304,12 @@
                             <img src="./img/agenda.png" alt="" class="img">
                         </a>
                         <div class="info">
-                            <p class="fs-4">Agenda de clientes</p>
-                            <p class="fs-4 mt-4 lead">JavaScript</p>
+                            <p class="fs-4 m-0">Agenda de clientes</p>
+                            <p class="fs-4 mt-3 lead">JavaScript</p>
+                        </div>
+                        <div>
+                            <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
+                            <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver Código</button>
                         </div>
                     </article>
                     <article class="proyecto trans">
@@ -306,8 +318,12 @@
                                 class="img">
                         </a>
                         <div class="info">
-                            <p class="fs-4">Encriptador</p>
-                            <p class="fs-4 mt-4 lead">JavaScript</p>
+                            <p class="fs-4 m-0">Encriptador</p>
+                            <p class="fs-4 mt-3 lead">JavaScript</p>
+                        </div>
+                        <div>
+                            <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
+                            <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver Código</button>
                         </div>
                     </article>
                     <article class="proyecto trans">
@@ -315,8 +331,12 @@
                             <img src="./img/rope.png" alt="imagen de la aplicación del encriptador" class="img">
                         </a>
                         <div class="info">
-                            <p class="fs-4">Ahorcado</p>
-                            <p class="fs-4 mt-4 lead">JavaScript</p>
+                            <p class="fs-4 m-0">Ahorcado</p>
+                            <p class="fs-4 mt-3 lead">JavaScript</p>
+                        </div>
+                        <div>
+                            <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
+                            <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver Código</button>
                         </div>
                     </article>
                     <article class="proyecto trans">
@@ -324,15 +344,23 @@
                             <img src="./img/img-react-2.png" alt="" class="img">
                         </a>
                         <div class="info">
-                            <p class="fs-4">Ecommerce</p>
-                            <p class="fs-4 mt-4 lead">React.js</p>
+                            <p class="fs-4 m-0">Ecommerce</p>
+                            <p class="fs-4 mt-3 lead">React.js</p>
+                        </div>
+                        <div>
+                            <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
+                            <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver Código</button>
                         </div>
                     </article>
                     <article class="proyecto trans">
                         <a href="#" target="_blank"><img src="img/img-appPacientes.png" alt="" class="img"></a>
                         <div class="info">
-                            <p class="fs-4">App de pacientes</p>
-                            <p class="fs-4 mt-4 lead">Programa ONE (pronto)</p>
+                            <p class="fs-4 m-0">App de pacientes</p>
+                            <p class="fs-4 mt-3 lead">Programa ONE (pronto)</p>
+                        </div>
+                        <div>
+                            <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
+                            <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver Código</button>
                         </div>
                     </article>
                     <article class="proyecto trans">
@@ -340,8 +368,12 @@
                             <img src="./img/img-carritoDeCompras.jpg" alt="" class="img">
                         </a>
                         <div class="info">
-                            <p class="fs-4">Carrito de compras</p>
-                            <p class="fs-4 mt-4 lead">JavaScript (pronto)</p>
+                            <p class="fs-4 m-0">Carrito de compras</p>
+                            <p class="fs-4 mt-3 lead">JavaScript (pronto)</p>
+                        </div>
+                        <div>
+                            <button class="btn btn-md m-2 btnColorUno bg-gradient">Ver Demo</button>
+                            <button class="btn btn-md m-2 btnColorDos bg-gradient">Ver código</button>
                         </div>
                     </article>
                     <!-- <article class="proyecto trans">
@@ -391,8 +423,8 @@
                 </div> -->
                 <div class="form-group text-center">
                     <label></label>
-                    <input type="submit" class="text-white btn btn-lg btnColorUno m-3" value="Enviar">
-                    <input type="reset" class="text-white btn btn-lg btnColorDos m-3" value="Borrar">
+                    <input type="submit" class="btn btn-lg btnColorUno m-3 bg-gradient" value="Enviar">
+                    <input type="reset" class="btn btn-lg btnColorDos m-3 bg-gradient" value="Borrar">
                 </div>
             </form>
         </section>
@@ -403,14 +435,14 @@
     <!-- Acá empieza el pie de página -->
     <footer id="footer" class="border-top">
         <div class="container-fluid">
+            <a href="#" class="logoFooter">Portafolio</a>
             <div class="column pie">
-                <a href="#" class="logoFooter">Portafolio</a>
                 <!-- <a href="https://github.com/Nahuel-DevOne/" target="_blank" class="m-2"><img src="./img/github.svg"
                         alt="Imagen del icono de GitHub" class="icono"></a>
                 <a href="https://www.linkedin.com/in/nahuel-developer/" target="_blank" class="m-2"><img
                         src="./img/linkedin.svg" alt="Imagen del icono de linkedIn" class="icono"></a> -->
             </div>
-            <h4 class="info mb-3">&copy;2022 Desarrollado por Nahuel-DevOne</h4>
+            <h4 class="footerInfo mb-2">&copy;2022 Desarrollado por Nahuel-DevOne</h4>
         </div>
     </footer>
     <!-- Acá termina el pie de página -->
