--- a/index.html
+++ b/index.html
@@ -436,12 +436,12 @@
     <footer id="footer" class="border-top">
         <div class="container-fluid">
             <a href="#" class="logoFooter">Portafolio</a>
-            <div class="column pie">
-                <!-- <a href="https://github.com/Nahuel-DevOne/" target="_blank" class="m-2"><img src="./img/github.svg"
+            <!-- <div class="column pie">
+                <a href="https://github.com/Nahuel-DevOne/" target="_blank" class="m-2"><img src="./img/github.svg"
                         alt="Imagen del icono de GitHub" class="icono"></a>
                 <a href="https://www.linkedin.com/in/nahuel-developer/" target="_blank" class="m-2"><img
-                        src="./img/linkedin.svg" alt="Imagen del icono de linkedIn" class="icono"></a> -->
-            </div>
+                        src="./img/linkedin.svg" alt="Imagen del icono de linkedIn" class="icono"></a>
+            </div> -->
             <h4 class="footerInfo mb-2">&copy;2022 Desarrollado por Nahuel-DevOne</h4>
         </div>
     </footer>
